Enabled editing of M3U playlists

As a bonus implemented a more efficient save system for playlist-files.

BUG:245963