src/core-impl/playlists/types/file/m3u/M3UPlaylist.h
@@ -52,6 +52,9 @@ class AMAROK_EXPORT_TESTS M3UPlaylist : public PlaylistFile
         virtual Meta::TrackList tracks();
         virtual void triggerTrackLoad();
 
+        virtual void addTrack( Meta::TrackPtr track, int position = -1 );
+        virtual void removeTrack( int position );
+
        /* the following has been copied from Meta.h
         * it is my hope that we can integrate Playlists
         * better into the rest of the Meta framework someday ~Bart Cerneels
@@ -69,6 +72,7 @@ class AMAROK_EXPORT_TESTS M3UPlaylist : public PlaylistFile
         bool load( QTextStream &stream ) { return loadM3u( stream ); }
 
     private:
+        void saveLater();
         bool loadM3u( QTextStream &stream );
 
         KUrl m_url;
