src/playlistmanager/file/PlaylistFileProvider.h
@@ -17,10 +17,10 @@
 #ifndef PLAYLISTFILEPROVIDER_H
 #define PLAYLISTFILEPROVIDER_H
 
-#include "core-impl/playlists/providers/user/UserPlaylistProvider.h"
 #include "core/playlists/PlaylistFormat.h"
-#include "core-impl/playlists/types/file/PlaylistFileSupport.h"
 #include "core/playlists/PlaylistProvider.h"
+#include "core-impl/playlists/providers/user/UserPlaylistProvider.h"
+#include "core-impl/playlists/types/file/PlaylistFileSupport.h"
 
 #include <kicon.h>
 
@@ -28,9 +28,9 @@ class KConfigGroup;
 class KUrl;
 
 class QAction;
+class QTimer;
 
 namespace Playlists {
-
 /**
     @author Bart Cerneels <bart.cerneels@kde.org>
 */
@@ -67,7 +67,15 @@ class PlaylistFileProvider : public Playlists::UserPlaylistProvider
 
         virtual void loadPlaylists();
 
+        /* PlaylistFileProvider methods */
+        /** Schedules a PlaylistFile to be saved on the next iteration of the mainloop.
+          * Each playlist will be scheduled and saved only once.
+          */
+        void saveLater( Playlists::PlaylistFilePtr playlist );
+
     private slots:
+        void slotSaveLater();
+
         void slotDelete();
         void slotRename();
         void slotRemove();
@@ -84,6 +92,9 @@ class PlaylistFileProvider : public Playlists::UserPlaylistProvider
         QAction *m_renameAction;
         QAction *m_deleteAction;
         QAction *m_removeTrackAction;
+
+        QTimer *m_saveLaterTimer;
+        QList<Playlists::PlaylistFilePtr> m_saveLaterPlaylists;
 };
 
 } //namespace Playlists
